--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
     "@tiptap/react": "^2.0.0-beta.199",
     "@tiptap/starter-kit": "^2.0.0-beta.199",
     "@types/styled-components": "^5.1.26",
+    "Buffer": "^0.0.0",
+    "ipfs-http-client": "^58.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.1",
+    "react-select": "^5.4.0",
+    "react-toastify": "^9.0.8",
+    "rich-markdown-editor": "^11.21.3",
     "styled-components": "^5.3.5",
     "typewriter-effect": "^2.19.0"
   },
@@ -32,5 +37,9 @@
     "tailwindcss": "^3.1.8",
     "typescript": "^4.6.4",
     "vite": "^3.0.7"
+  },
+  "resolutions": {
+    "prosemirror-model": "1.16.0",
+    "@types/react": "17.0.30"
   }
 }
