all field types

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@tiptap/starter-kit": "^2.0.0-beta.199",
     "@types/styled-components": "^5.1.26",
     "Buffer": "^0.0.0",
+    "degen": "^0.0.112",
+    "framer-motion": "^7.5.3",
     "ipfs-http-client": "^58.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
