--- a/package.json
+++ b/package.json
@@ -12,21 +12,27 @@
     "@ant-design/icons": "^4.7.0",
     "@headlessui/react": "^1.7.3",
     "@heroicons/react": "^2.0.11",
+    "@rainbow-me/rainbowkit": "^0.6.1",
     "@tiptap/react": "^2.0.0-beta.199",
     "@tiptap/starter-kit": "^2.0.0-beta.199",
     "@types/styled-components": "^5.1.26",
     "Buffer": "^0.0.0",
     "degen": "^0.0.112",
+    "ethers": "^5.7.1",
     "framer-motion": "^7.5.3",
     "ipfs-http-client": "^58.0.1",
+    "jotai": "^1.8.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.2",
     "react-router-dom": "^6.4.1",
     "react-select": "^5.4.0",
     "react-toastify": "^9.0.8",
     "rich-markdown-editor": "^11.21.3",
+    "siwe": "^1.1.6",
     "styled-components": "^5.3.5",
-    "typewriter-effect": "^2.19.0"
+    "typewriter-effect": "^2.19.0",
+    "wagmi": "0.6.7"
   },
   "devDependencies": {
     "@types/node": "^18.7.23",
