--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "ipfs-http-client": "^58.0.1",
     "jotai": "^1.8.5",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.2",
     "react-router-dom": "^6.4.1",
     "react-select": "^5.4.0",
+    "react-share": "^4.4.1",
     "react-toastify": "^9.0.8",
+    "react-use": "^17.4.0",
     "rich-markdown-editor": "^11.21.3",
     "siwe": "^1.1.6",
     "styled-components": "^5.3.5",
